tests/negative/gold/block_parameter_test.gold
tests/negative/block_parameter_test.toit:4:12: error: Unexpected |
  if true: |x y| print "ok"
           ^
Compilation failed.
